services/pihole/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: dnsmasq-volume
          persistentVolumeClaim:
            claimName: dnsmasq-volume
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:latest
          volumeMounts:
            - name: config-volume
              mountPath: /etc/pihole
            - name: dnsmasq-volume
              mountPath: /etc/dnsmasq.d
          ports:
            - name: web
              containerPort: 80
            - name: dns
              containerPort: 53
            - name: dns-udp
              protocol: UDP
              containerPort: 53

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: v1
kind: Service
metadata:
  name: dns-service
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.50.100
spec:
  type: LoadBalancer
  ports:
    - name: dns
      port: 53
      targetPort: dns
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
