services/pihole/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://pihole.durbin.casa/admin'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: pihole
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: pi-hole
    gethomepage.dev/name: Pi-Hole
spec:
  ingressClassName: nginx
  rules:
    - host: pihole.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
